project(SuperPixelGui)
cmake_minimum_required(VERSION 2.8.11)

find_package( OpenCV REQUIRED )
option(Qt5 "Use Qt5 instead of Qt4 if available" ON)

set(CMAKE_MODULE_PATH ${SuperPixelGui_SOURCE_DIR}/cmake)

include_directories ("${SuperPixelGui_SOURCE_DIR}/../../lib")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(SOURCE_FILES main.cpp mainwindow.cpp utils.cpp imgwdg.cpp )

# OSX-Bundle Settings
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	set(MACOSX_BUNDLE_ICON_FILE superpi.icns)
	SET(MACOSX_BUNDLE_BUNDLE_NAME SuperPixelGUI)
	set(app_icon ${SuperPixelGui_SOURCE_DIR}/superpi.icns)
	set_source_files_properties(${app_icon} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
ENDIF()

# Allowed to use Qt5?
IF(${Qt5})
	find_package(Qt5Widgets)
	Set(Qt5_FOUND ${Qt5Widgets_FOUND})
ELSE (${Qt5})
	Set(Qt5_FOUND false)
ENDIF()

IF (Qt5_FOUND)
	set(CMAKE_AUTOMOC ON)
        QT5_ADD_RESOURCES( RES ${SuperPixelGui_SOURCE_DIR}/superpixelgui.qrc)
        IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
                add_executable(SuperPixelGui MACOSX_BUNDLE ${app_icon} ${SOURCE_FILES})
	ELSE()
                add_executable(SuperPixelGui ${SOURCE_FILES} ${RES})
	ENDIF()
	target_link_libraries(SuperPixelGui rslic ${OpenCV_LIBS} Qt5::Core Qt5::Widgets )
ELSE (Qt5_FOUND)
	find_package(Qt4 COMPONENTS QTCORE QTGUI)
	IF (Qt4_FOUND)
		INCLUDE(${QT_USE_FILE})
		ADD_DEFINITIONS(${QT_DEFINITIONS})
		QT4_WRAP_CPP(SOURCE_FILES_HEADERS_MOC imgwdg.h mainwindow.h)
                QT4_ADD_RESOURCES( RES ${SuperPixelGui_SOURCE_DIR}/superpixelgui.qrc)
		IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
                        ADD_EXECUTABLE(SuperPixelGui  MACOSX_BUNDLE ${app_icon} ${SOURCE_FILES} ${SOURCE_FILES_HEADERS_MOC})
		ELSE()
                        ADD_EXECUTABLE(SuperPixelGui ${SOURCE_FILES} ${SOURCE_FILES_HEADERS_MOC} ${RES})
		ENDIF()
		TARGET_LINK_LIBRARIES(SuperPixelGui  rslic ${OpenCV_LIBS} ${QT_LIBRARIES})
	ENDIF(Qt4_FOUND)
ENDIF(Qt5_FOUND)

install(TARGETS SuperPixelGui DESTINATION bin)
